Create server.py app routes

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>
-      {% block titile %} {% endblock %}
+      {% block title %} {% endblock %}
     </title>
   </head>
   <body>
