--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,23 @@
 {% extends 'base.html' %} 
 
-{% block title %} {% endblock %} 
+{% block title %}Social Sesh{% endblock %} 
 
 {% block body %} 
+<h1>Connect. Create. Contribute.</h1>
+
+<h2>Create an Account or Log-in</h2>
+  <form action="/account" method ="POST">
+    <p>
+      Email<input type="text" name="password">
+    </p>
+
+    <p>
+      Password <input type="password" name="password">
+    </p>
+
+    <p>
+      <input type="submit">
+    </p>
+  </form> 
 
 {% endblock %} 
