Create and complete crud.py

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %} 
 
-{% block title %}Social Sesh{% endblock %} 
+{% block title %}SocialSesh{% endblock %} 
 
 {% block body %} 
-<h1>Connect. Create. Contribute.</h1>
+<h1>SocialSesh</h1>
+<h2>Connect. Create. Contribute.</h2>
 
-<h2>Create an Account or Log-in</h2>
+<h3>Create an Account or Log-in</h3>
   <form action="/account" method ="POST">
     <p>
       Email<input type="text" name="password">
