Create template and static files

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,10 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale-1">
     <title>
-      {% block title %} {% endblock %}
+      {% block title %} SocialSesh {% endblock %}
     </title>
   </head>
   <body>
-    {% block body %} {% endblock %}
+    {% block body %}
+    
+
+    {% endblock %}
   </body>
 </html>
