--- a/templates/index.html
+++ b/templates/index.html
@@ -1,23 +1,14 @@
 {% extends 'base.html' %} 
 
-{% block title %}SocialSesh{% endblock %} 
+{% block title %} SocialSesh {% endblock %} 
 
 {% block body %} 
 <h1>SocialSesh</h1>
 <h2>Connect. Create. Contribute.</h2>
 
-<h3>Create an Account or Log-in</h3>
-  <form action="/account" method ="POST">
+  <form action="/profile">
     <p>
-      Email<input type="text" name="password">
-    </p>
-
-    <p>
-      Password <input type="password" name="password">
-    </p>
-
-    <p>
-      <input type="submit">
+      <button id="create">Create profile</button> <button id="log">Log in</button>
     </p>
   </form> 
 
