--- a/templates/base.html
+++ b/templates/base.html
@@ -2,15 +2,20 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale-1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>
       {% block title %} SocialSesh {% endblock %}
     </title>
+    <script
+    src="https://code.jquery.com/jquery-3.6.0.js"
+    integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+    crossorigin="anonymous"></script>
   </head>
   <body>
     {% block body %}
     
 
     {% endblock %}
+    <script src="/static/js/index.js"></script>
   </body>
 </html>
