Create and complete a users json file for database

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,6 @@
     
 
     {% endblock %}
-    <script src="/static/js/index.js"></script>
+    <script src="static/js/profile.js"></script>
   </body>
 </html>
