--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,14 @@
 
   <form action="/profile">
     <p>
-      <button id="create">Create profile</button> <button id="log">Log in</button>
+      <button id="create">Create profile</button> 
     </p>
   </form> 
+  <form action="/login">
+    <p>
+      <button id="login">Log in</button> 
+    </p>
+  </form> 
+
 
 {% endblock %} 
