--- a/templates/profile.html
+++ b/templates/profile.html
@@ -10,7 +10,7 @@
 <h3>Let's Create Your Profile</h3>
 <h4>Please fill out the following:</h4>
 
-  <form action="/login" name="createprofile">
+  <form action="/login" id="createprofile">
     <p>
       <label for="fname">First name</label>
       <input type="text" name="fname">
