Modify project directory files

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 <h1>SocialSesh</h1>
 <h2>Connect. Create. Contribute.</h2>
 
-  <form action="/profile">
+  <form action="/form">
     <p>
       <button id="create">Create profile</button> 
     </p>
