--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
 <h3>Please Log-In</h4>
 
 
-<form action="/dashboard">
+<form action="/profile">
   <p>
     <label for="email">Email</label>
     <input type="text" name="email">
