--- a/templates/form.html
+++ b/templates/form.html
@@ -8,7 +8,7 @@
 <h2>Connect. Create. Contribute.</h2>
 <h3>Please fill out the following:</h3>
 
-  <form action="/login" id="createprofile" method="POST">
+  <form action="/form" id="createprofile" method="POST">
     <p>
       <label for="fname">First name</label>
       <input type="text" name="fname">
@@ -27,7 +27,7 @@
     </p>
     <p>
       <label for="phone">Phone number</label>
-      <input type="text" phone="phone">
+      <input type="text" name="phone">
     </p>
     <p>
       <button type="submit">Submit</button>
