Modify HTML template files and server.py

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,15 +3,21 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>
-      {% block title %} SocialSesh {% endblock %}
-    </title>
+    
+    {% block title %} {% endblock %}
+
+    <title>SocialSesh</title>
+  
     <script
     src="https://code.jquery.com/jquery-3.6.0.js"
     integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
     crossorigin="anonymous"></script>
   </head>
+
   <body>
+    <h1>SocialSesh</h1>
+    <h2>Connect. Create. Contribute.</h2>
+
     {% with messages = get_flashed_messages() %}
       {% if messages %}
         <ul class=flashes>
@@ -24,7 +30,6 @@
 
     {% block body %}
     
-
     {% endblock %}
     <script src="static/js/profile.js"></script>
   </body>
