--- a/templates/form.html
+++ b/templates/form.html
@@ -1,12 +1,10 @@
 {% extends 'base.html' %} 
 
-{% block title %}SocialSesh{% endblock %} 
+{% block title %} {% endblock %} 
 
 {% block body %} 
 
-<h1>SocialSesh</h1>
-<h2>Connect. Create. Contribute.</h2>
-<h3>Please fill out the following:</h3>
+<h4>To create profile, please fill out the following:</h4>
 
   <form action="/form" id="createprofile" method="POST">
     <p>
