--- a/templates/index.html
+++ b/templates/index.html
@@ -1,22 +1,21 @@
 {% extends 'base.html' %} 
 
-{% block title %} SocialSesh {% endblock %} 
+{% block title %} {% endblock %} 
 
 {% block body %} 
 
-<h1>SocialSesh</h1>
-<h2>Connect. Create. Contribute.</h2>
+<em>Through Virtual Social Events</em>
 
   <form action="/form">
     <p>
       <button id="create">Create profile</button> 
     </p>
+
   </form> 
   <form action="/login">
     <p>
       <button id="login">Log in</button> 
     </p>
   </form> 
-
 
 {% endblock %} 
