--- a/templates/login.html
+++ b/templates/login.html
@@ -1,12 +1,10 @@
 {% extends 'base.html' %} 
 
-{% block title %}SocialSesh{% endblock %} 
+{% block title %} {% endblock %} 
 
 {% block body %} 
-<h1>SocialSesh</h1>
-<h2>Connect. Create. Contribute.</h2>
-<h3>Please Log-In</h4>
 
+<h4>To view profile, please log-in:</h4>
 
 <form action="/login" method="POST">
   <p>
