Modify server routes and template files

--- a/templates/event_details.html
+++ b/templates/event_details.html
@@ -15,4 +15,11 @@
 
 <img src="{{event.event_photo}}">
  
+</form> 
+<form action="/register" method="POST">
+  <p>
+    <button id="register">Register</button> 
+  </p>
+</form> 
+
 {% endblock %}
