--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,6 @@
     {% block body %}
     
     {% endblock %}
-    <script src="static/js/profile.js"></script>
+    <script src="/static/js/profile.js"></script>
   </body>
 </html>
