Create send_sms.py for twilio SMS text messages

--- a/templates/register.html
+++ b/templates/register.html
@@ -14,7 +14,7 @@
     <input type="text" name="phone">
   </p>
   <p>
-    <button type="submit">Submit</button>
+    <button type="submit">Send SMS</button>
   </p>
 </form> 
 
