--- a/templates/thank_you.html
+++ b/templates/thank_you.html
@@ -4,8 +4,10 @@
 
 {% block body %}
 
-<h3>Thank you!</h3>
+<h3>Thank you for registering for a virtual event!</h3>
 
 <p>We've sent you a text message confirmation</p> 
+
+<p>Be safe. Enjoy.</p> 
 
 {% endblock %}
