Modify server routes and database files

--- a/templates/all_events.html
+++ b/templates/all_events.html
@@ -3,7 +3,7 @@
 {% block title %}{% endblock %}
 
 {% block body %}
-  <h3>All Events</h3>
+  <h3>All Virtual Events</h3>
 
   <ul>
     {% for event in events %}
