Modify various files and templates to ensure functionality of web app

--- a/templates/form.html
+++ b/templates/form.html
@@ -9,23 +9,23 @@
   <form action="/form" id="createprofile" method="POST">
     <p>
       <label for="fname">First name</label>
-      <input type="text" name="fname">
+      <input type="text" id="first" name="fname">
     </p>
     <p>
       <label for="lname">Last name</label>
-      <input type="text" name="lname">
+      <input type="text" id="last" name="lname">
     </p>
     <p>
       <label for="email">Email</label>
-      <input type="text" name="email">
+      <input type="text" id="email" name="email">
     </p>
     <p>
       <label for="password">Password</label>
-      <input type="text" name="password">
+      <input type="text" id="pass" name="password">
     </p>
     <p>
       <label for="phone">Phone number</label>
-      <input type="text" name="phone">
+      <input type="text" id="phone" name="phone">
     </p>
     <p>
       <button type="submit">Submit</button>
