Database table errors are fixed and running properly

--- a/templates/event_details.html
+++ b/templates/event_details.html
@@ -15,7 +15,7 @@
   </p>
 
   <p>
-    <img src="{{ event.event_photo }}">
+    <img src={{ event.event_photo }}>
   </p>
  
   <form action="/register" method="POST">
