--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 
 {% block body %} 
 
-<em>Through Virtual Social Events</em>
+<em>Through Online Virtual Social Events</em>
 
   <form action="/form">
     <p>
