Complete event registration and conifirmation routes

--- a/templates/event_details.html
+++ b/templates/event_details.html
@@ -13,12 +13,8 @@
   <p>
   {{ event.event_date }} {{ event.event_date }} 
   </p>
-
-  <form action="/register" method="POST">
-    <p>
-      <button id="register">Register</button> 
-    </p>
-  </form> 
+  
+  <a href="/register">Register</a>
 
   <p>
     <img src="{{ event.event_photo }}">
