--- a/templates/register.html
+++ b/templates/register.html
@@ -8,7 +8,7 @@
 
   <p>Please enter your phone number:</p> 
 
-  <form action="/confirmation" method="POST">
+  <form action="/register" method="POST">
     <p>
       <label for="phone">Phone</label>
       <input type="text" name="phone">
