Update docstrings in server.py

--- a/templates/thanks.html
+++ b/templates/thanks.html
@@ -11,11 +11,11 @@
 <p>Be safe and remember to enjoy your social session.</p> 
 
 <section id="event">
-  <button id="events-button">Return to Events</button>
+  <a href="/events">Return to Events</a> 
 </section>
 
 <section id="logout">
-  <button id="logout-button">Log Out</button>
+  <a href="/">Log Out</a>
 </section>
 
 {% endblock %}
