--- a/templates/thanks.html
+++ b/templates/thanks.html
@@ -15,11 +15,7 @@
 </section>
 
 <section id="logout">
-  <a href="/">Log Out</a>
+  <a href="/logout">Log Out</a>
 </section>
-
-<p>
-  <button id="logout-button">Logout</button> 
-</p>
 
 {% endblock %}
