Add more users, events, and photos to database

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,25 +7,13 @@
 
 <h4>Hello...</h4> <!-- #TODO: Add a jinja hello to user -->
 
-<p>Thank you for stopping by!</p> 
 <p>As you safely social distance, we have several events to keep you <strong>virtually</strong> close to others.</p> 
-<p>Check out all of our events below</p>
+<p>There are two ways to view our events:</p>
 
-<p><a href="/events">View Events</a></p>
+<p><a href="/events">1. View all events</a></p>
 
 
+<p><a href="/category">2. View events by category</a></p>
 
-<!-- <form action="/profile" method="POST">
-  What type of social event are you interested in?
-    <select name="types">
-      <option value="select">Select</option>
-      <option value="activity">Activity</option>
-      <option value="celebration">Celebration</option>
-      <option value="educational">Educational</option>
-      <option value="entertainment">Entertainment</option>
-      <option value="other">Other</option>
-    </select>
-    <button type="submit">Submit</button>
-</form> -->
 
 {% endblock %} 
