Fix errors on event_type route and HTML template

--- a/templates/category_events.html
+++ b/templates/category_events.html
@@ -4,7 +4,7 @@
 
 {% block body %} 
 
-What type of virtual event are you interested in?
+<p>Choose the virtual event category you would like to view:</p>
   <form action="/category" method="POST">
       <select name="types">
         <option value="select">Select</option>
