Create event_type templates for server routes

--- a/templates/category_events.html
+++ b/templates/category_events.html
@@ -5,14 +5,13 @@
 {% block body %} 
 
 <p>Choose the virtual event category you would like to view:</p>
-  <form action="/category" method="POST">
+  <form action="/category" method="post">
       <select name="types">
         <option value="select">Select</option>
         <option value="activity">Activity</option>
         <option value="celebration">Celebration</option>
         <option value="educational">Educational</option>
         <option value="entertainment">Entertainment</option>
-        <option value="other">Other</option>
       </select>
       <button type="submit">Submit</button>
   </form>
