--- a/templates/event_types.html
+++ b/templates/event_types.html
@@ -5,7 +5,7 @@
 {% block body %}
 
 <!-- TODO: Fix this document. For loop may not be the correct approach -->
-
+ <!-- if using same template, use if event type == this. Dependng on the condition it will render -->
 <ul>
   {% for type in event_type %}
     <li>
