--- a/templates/category_events.html
+++ b/templates/category_events.html
@@ -5,7 +5,7 @@
 {% block body %} 
 
 <p>Choose the virtual event category you would like to view:</p>
-  <form action="/category" method="post">
+  <form action="/category" method="POST">
       <select name="types">
         <option value="select">Select</option>
         <option value="activity">Activity</option>
