--- a/templates/type_entertainment.html
+++ b/templates/type_entertainment.html
@@ -4,7 +4,7 @@
 
 <h1>All Events</h1>
 <ul>
-  {% for type in event_type %}
+  {% for type in events %}
     <li>
       <a href="category/event_type{{ type.event_id }}">
         {{ type.event_name }}
