--- a/templates/base.html
+++ b/templates/base.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
-    {% block title %} {% endblock %}
 
-    <title>SocialSesh</title>
-  
-    <script
-    src="https://code.jquery.com/jquery-3.6.0.js"
-    integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
-    crossorigin="anonymous"></script>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    {% block title %}
+      {% if title %} 
+        <title>SocialSesh - {{ title }}</title>
+      {% else %}
+        <title>SocialSesh</title>
+      {% endif %}
+    {% endblock %}
+      <script
+      src="https://code.jquery.com/jquery-3.6.0.js"
+      integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+      crossorigin="anonymous"></script>
   </head>
-
   <body>
     <h1>SocialSesh</h1>
     <h2>Connect. Create. Contribute.</h2>
@@ -27,10 +32,12 @@
         </ul>
       {% endif %}
     {% endwith %}
-
-    {% block body %}
     
-    {% endblock %}
+    <div class="container">
+    {% block body %}{% endblock %}
+    </div>
+    <!-- Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <script src="/static/js/profile.js"></script>
   </body>
 </html>
