--- a/templates/base.html
+++ b/templates/base.html
@@ -7,21 +7,20 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    {% block title %}
-      {% if title %} 
-        <title>SocialSesh - {{ title }}</title>
-      {% else %}
-        <title>SocialSesh</title>
-      {% endif %}
-    {% endblock %}
+    {% block title %} {% endblock %}
+
+    <title>SocialSesh</title>
+    
       <script
       src="https://code.jquery.com/jquery-3.6.0.js"
       integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
       crossorigin="anonymous"></script>
   </head>
   <body>
+    <div class="container">
     <h1>SocialSesh</h1>
     <h2>Connect. Create. Contribute.</h2>
+    </div>
 
     {% with messages = get_flashed_messages() %}
       {% if messages %}
