--- a/templates/form.html
+++ b/templates/form.html
@@ -6,7 +6,63 @@
 
 <h4>To create profile, please fill out the following:</h4>
 
-  <form action="/form" id="createprofile" method="POST">
+<div class="container">
+  <div class="row">
+      <div class="well col-md-offset-3 col-md-6">
+      <form action="" method="post" id="register-form" novalidate="novalidate">
+
+    <h5>Registration form</h5>
+
+    <div id="form-content">
+    
+
+            <div class="form-group">
+                <label for="fname">First name</label>
+                <input class="form-control" type="text" name="fname">
+            </div>
+            
+            <div class="form-group">
+              <label for="lname">Last name</label>
+              <input class="form-control" type="text" name="lname">
+          </div>
+
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input class="form-control" type="text" name="email">
+        </div>
+
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input class="form-control" type="password" name="password">
+            </div>
+        <div class="form-group">
+                <label for="phone">Phone number</label>
+                <input class="form-control" type="text" name="phone">
+            </div>
+            
+           
+ <div class="form-group">
+   <label> Gender </label><br/>
+<label for="gender_male">Male
+</label>
+<input type="radio" id="gender_male" value="male" name="gender" >
+   <label for="gender_female">Female</label>
+<input type="radio"  value="female" name="gender">
+</div>
+
+
+
+       <div class="form-group">               
+                <input class="btn btn-primary" type="submit" name="submit">
+            </div>
+    </div>
+
+</form>
+    </div> 
+  </div> 
+</div> 
+
+  <!-- <form action="/form" id="createprofile" method="POST">
     <p>
       <label for="fname">First name</label>
       <input type="text" id="first" name="fname">
@@ -30,6 +86,6 @@
     <p>
       <button type="submit">Submit</button>
     </p>
-  </form> 
+  </form>  -->
 
 {% endblock %} 
