Update forms and validation for create profile and login routes

--- a/templates/form.html
+++ b/templates/form.html
@@ -53,7 +53,7 @@
 
 
        <div class="form-group">               
-                <input class="btn btn-primary" type="submit" name="submit">
+                <input class="btn btn-outline-info" type="submit" name="submit">
             </div>
     </div>
 
