--- a/templates/form.html
+++ b/templates/form.html
@@ -9,33 +9,33 @@
 <div class="container">
   <div class="row">
       <div class="well col-md-offset-3 col-md-6">
-      <form action="" method="post" id="register-form" novalidate="novalidate">
+      <form action="/form" method="post" id="register-form" novalidate="novalidate">
 
     <h5>Registration form</h5>
 
     <div id="form-content">
             <div class="form-group">
                 <label for="fname">First name</label>
-                <input class="form-control" type="text" name="fname">
+                <input class="form-control" type="text" name="fname" required>
             </div>
             
             <div class="form-group">
               <label for="lname">Last name</label>
-              <input class="form-control" type="text" name="lname">
+              <input class="form-control" type="text" name="lname" required>
           </div>
 
           <div class="form-group">
             <label for="email">Email</label>
-            <input class="form-control" type="text" name="email">
+            <input class="form-control" type="text" name="email" required>
         </div>
 
             <div class="form-group">
                 <label for="password">Password</label>
-                <input class="form-control" type="password" name="password">
+                <input class="form-control" type="password" name="password" required>
             </div>
         <div class="form-group">
                 <label for="phone">Phone number</label>
-                <input class="form-control" type="text" name="phone">
+                <input class="form-control" type="text" name="phone" required>
             </div>
        <div class="form-group">               
                 <input class="btn btn-outline-info" type="submit" name="submit">
