--- a/templates/form.html
+++ b/templates/form.html
@@ -6,71 +6,30 @@
 
 <h4>To create profile, please fill out the following:</h4>
 
-<div class="container">
-  <div class="row">
-      <div class="well col-md-offset-3 col-md-6">
-      <form action="/form" method="post" id="register-form" novalidate="novalidate">
-
-    <h5>Registration form</h5>
-
-    <div id="form-content">
-            <div class="form-group">
-                <label for="fname">First name</label>
-                <input class="form-control" type="text" name="fname" required>
-            </div>
-            
-            <div class="form-group">
-              <label for="lname">Last name</label>
-              <input class="form-control" type="text" name="lname" required>
-          </div>
-
-          <div class="form-group">
-            <label for="email">Email</label>
-            <input class="form-control" type="text" name="email" required>
-        </div>
-
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input class="form-control" type="password" name="password" required>
-            </div>
-        <div class="form-group">
-                <label for="phone">Phone number</label>
-                <input class="form-control" type="text" name="phone" required>
-            </div>
-       <div class="form-group">               
-                <input class="btn btn-outline-info" type="submit" name="submit">
-            </div>
-    </div>
-
-</form>
-    </div> 
-  </div> 
-</div> 
-
-  <!-- <form action="/form" id="createprofile" method="POST">
+  <form action="/form" id="createprofile" method="POST">
     <p>
       <label for="fname">First name</label>
-      <input type="text" id="first" name="fname">
+      <input type="text" id="first" name="fname" required>
     </p>
     <p>
       <label for="lname">Last name</label>
-      <input type="text" id="last" name="lname">
+      <input type="text" id="last" name="lname" required>
     </p>
     <p>
       <label for="email">Email</label>
-      <input type="text" id="email" name="email">
+      <input type="text" id="email" name="email" required>
     </p>
     <p>
       <label for="password">Password</label>
-      <input type="text" id="pass" name="password">
+      <input type="text" id="pass" name="password" required>
     </p>
     <p>
       <label for="phone">Phone number</label>
-      <input type="text" id="phone" name="phone">
+      <input type="text" id="phone" name="phone" required>
     </p>
     <p>
       <button type="submit">Submit</button>
     </p>
-  </form>  -->
+  </form> 
 
 {% endblock %} 
