Add calendar plug into display scheduled events

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -16,4 +16,6 @@
 <p><a href="/category">2. View events by category</a></p>
 
 
+<p><a href="/calendar">Calendar of Events</a></p>
+
 {% endblock %} 
