--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,18 +4,14 @@
 
 {% block body %} 
 
-
 <h4>Hello...</h4> <!-- #TODO: Add a jinja hello to user -->
 
 <p>As you safely social distance, we have several events to keep you <strong>virtually</strong> close to others.</p> 
-<p>There are two ways to view our events:</p>
 
-<p><a href="/events">1. View all events</a></p>
+<p><a href="/events">View list of all events</a></p>
 
+<p><a href="/category">View list of events by category</a></p>
 
-<p><a href="/category">2. View events by category</a></p>
-
-
-<p><a href="/calendar">Calendar of Events</a></p>
+<p><a href="/calendar">View calendar of all events</a></p>
 
 {% endblock %} 
