--- a/templates/category_events.html
+++ b/templates/category_events.html
@@ -5,8 +5,8 @@
 {% block body %} 
 
 <p>Choose the virtual event category you would like to view:</p>
-  <form action="/category" method="POST">
-      <select name="types">
+  <form id ="category">
+      <select name="types" id = "types">
         <option value="select">Select</option>
         <option value="activity">Activity</option>
         <option value="celebration">Celebration</option>
@@ -15,6 +15,8 @@
       </select>
       <button type="submit">Submit</button>
   </form>
-  </p>
+</p>
+
+<script src="/static/js/profile.js"></script>
 
 {% endblock %} 
