--- a/templates/type_educational.html
+++ b/templates/type_educational.html
@@ -1,8 +1,8 @@
-{% extends 'base.html' %}
+<!-- {% extends 'base.html' %}
 
 {% block title %}{% endblock %}
 
-{% block body %}
+{% block body %} -->
 
 <h3>All Virtual Events</h3>
   <ul>
@@ -15,4 +15,4 @@
   {% endfor %}
   </ul> 
 
-{% endblock %}
+<!-- {% endblock %} -->
