--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -1,9 +1,10 @@
-<!-- <!DOCTYPE html>
-<html lang='en'>
+<!DOCTYPE html>
+<html>
   <head>
-    <meta charset='utf-8' />
-    <link href='fullcalendar/main.css' rel='stylesheet' />
-    <script src='fullcalendar/main.js'></script>
+    <meta charset="utf-8">
+    <title>Full Calendar of Events</title>
+    <link href="https://cdn.jsdelivr.net/npm/fullcalendar@5.6.0/main.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.6.0/main.min.js"></script>
     <script>
 
       document.addEventListener('DOMContentLoaded', function() {
@@ -19,27 +20,4 @@
   <body>
     <div id='calendar'></div>
   </body>
-</html> -->
-
-{% extends 'base.html' %} 
-
-{% block title %} {% endblock %} 
-
-<title>Calendar of Events</title>
-
-{% block body %}  -->
-
-
-<link rel="https://cdn.jsdelivr.net/npm/fullcalendar@5.6.0/main.min.css">
-<script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.6.0/main.min.js"></script>
-
-<div id="calendar"></div>
-  <script>
-    let calendarEl = document.getElementById("calendar");
-    let calendar = new FullCalendar.Calendar(calendarEl, {});
-    calendar.render();
-  </script>
-
-
-
-{% endblock %}
+</html>
