--- a/templates/category_events.html
+++ b/templates/category_events.html
@@ -5,7 +5,7 @@
 {% block body %} 
 
 <p>Choose the virtual event category you would like to view:</p>
-  <form id ="category">
+  <form id ="category" method = "POST">
       <select name="types" id = "types">
         <option value="select">Select</option>
         <option value="activity">Activity</option>
@@ -16,7 +16,9 @@
       <button type="submit">Submit</button>
   </form>
 </p>
+  <div id ="event_results">
 
+  </div>
 <script src="/static/js/profile.js"></script>
 
 {% endblock %} 
