--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -3,21 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Full Calendar of Events</title>
-    <link href="https://cdn.jsdelivr.net/npm/fullcalendar@5.6.0/main.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@5.6.0/main.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.6.0/main.min.js"></script>
-    <script>
-
-      document.addEventListener('DOMContentLoaded', function() {
-        var calendarEl = document.getElementById('calendar');
-        var calendar = new FullCalendar.Calendar(calendarEl, {
-          initialView: 'dayGridMonth'
-        });
-        calendar.render();
-      });
-
-    </script>
   </head>
+   
   <body>
     <div id='calendar'></div>
+    <script src="/static/js/calendar.js"></script>
   </body>
 </html>
