Complete entire AJAXcall for each event category

--- a/templates/category_events.html
+++ b/templates/category_events.html
@@ -16,9 +16,9 @@
       <button type="submit">Submit</button>
   </form>
 </p>
-  <div id ="event_results">
+  <ol id ="event_results">
    
-  </div>
+  </ol>
 <script src="/static/js/profile.js"></script>
 
 {% endblock %} 
