--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,8 @@
       src="https://code.jquery.com/jquery-3.6.0.js"
       integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
       crossorigin="anonymous"></script>
+    
+    {% block head %} {% endblock %}  
   </head>
   <body>
     <div class="container">
