--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -1,14 +1,16 @@
-<!DOCTYPE html>
-<html>
-  <head>
+{% extends 'base.html' %}
+
+{% block title %}{% endblock %}
+
+{% block head %}
     <meta charset="utf-8">
     <title>Full Calendar of Events</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@5.6.0/main.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.6.0/main.min.js"></script>
-  </head>
-   
-  <body>
+{% endblock %}   
+
+{% block body %}
     <div id='calendar'></div>
     <script src="/static/js/calendar.js"></script>
-  </body>
-</html>
+{% endblock %}
+
