--- a/templates/form.html
+++ b/templates/form.html
@@ -21,7 +21,7 @@
     </p>
     <p>
       <label for="password">Password</label>
-      <input type="text" id="pass" name="password" required>
+      <input type="password" id="pass" name="password" required>
     </p>
     <p>
       <label for="phone">Phone number</label>
