--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,7 @@
   </p>
   <p>
     <label for="password">Password</label>
-    <input type="text" name="password" required>
+    <input type="password" name="password" required>
   </p>
   <p>
     <button type="submit">Submit</button>
