Clean up templates and server files

--- a/templates/event_details.html
+++ b/templates/event_details.html
@@ -11,7 +11,7 @@
   </p>
   
   <p>
-  {{ event.event_date }} {{ event.event_date }} 
+  {{ event.event_start_date }} {{ event.event_end_date }} 
   </p>
   
   <a href="/register">Register</a>
