--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,7 +4,7 @@
 
 {% block body %} 
 
-<h4>Hello...</h4> <!-- #TODO: Add a jinja hello to user -->
+<h4>Welcome!</h4> 
 
 <p>As you safely social distance, we have several events to keep you <strong>virtually</strong> close to others.</p> 
 
