Modify send_sms function

--- a/templates/thanks.html
+++ b/templates/thanks.html
@@ -4,11 +4,11 @@
 
 {% block body %}
 
-<h3>Thank you for registering for an online virtual event!</h3>
+<h3>Thank you for registering!</h3>
 
 <p>We've sent you a text message confirmation</p> 
 
-<p>Be safe and remember to enjoy your social session.</p> 
+<p>Be safe and remember to enjoy your online virtual social session.</p> 
 
 <section id="event">
   <a href="/events">Return to Events</a> 
