--- a/templates/event_details.html
+++ b/templates/event_details.html
@@ -11,7 +11,11 @@
   </p>
   
   <p>
-  {{ event.event_start_date }} {{ event.event_end_date }} 
+   Starts: {{ event_start_date }} 
+  </p>
+
+  <p>
+    Ends: {{ event_end_date }} 
   </p>
   
   <a href="/register">Register</a>
