Modify titles on server routes

--- a/templates/all_events.html
+++ b/templates/all_events.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
-{% block title %}{% endblock %}
+{% block title %} SocialSesh - All Events {% endblock %}
 
 {% block body %}
-  <h3>All Virtual Events</h3>
+  <h5>All Virtual Events</h5>
     <ol>
       {% for event in events %}
         <li>
