--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}{% endblock %}
+{% block title %} SocialSesh - Calendar {% endblock %}
 
 {% block head %}
     <meta charset="utf-8">
