--- a/templates/form.html
+++ b/templates/form.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %} 
 
-{% block title %} {% endblock %} 
+{% block title %} SocialSesh - Create Profile {% endblock %} 
 
 {% block body %} 
 
-<h4>To create profile, please fill out the following:</h4>
+<h5>To create profile, please fill out the following:</h5>
 
   <form action="/form" id="createprofile" method="POST">
     <p>
