--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %} 
 
-{% block title %} {% endblock %} 
+{% block title %} SocialSesh - Profile {% endblock %} 
 
 {% block body %} 
 
-<h4>Welcome!</h4> 
+<h5>Welcome!</h5> 
 
 <p>As you safely social distance, we have several events to keep you <strong>virtually</strong> close to others.</p> 
 
