--- a/templates/register.html
+++ b/templates/register.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 
-{% block title %}{% endblock %}
+{% block title %} SocialSesh - Register {% endblock %}
 
 {% block body %}
 
-<h3>Registration for Event</h3>
+<h5>Registration for Event</h5>
 
   <p>Please enter your phone number:</p> 
 
