--- a/templates/base.html
+++ b/templates/base.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>SocialSesh</title>
+    <title>{% block title %} SocialSesh {% endblock %}</title>
     
-    {% block title %} {% endblock %}
-
     <!-- Bootstrap CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
     <!-- Font Awesome CDN -->
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <script src="https://use.fontawesome.com/589931c264.js"></script>
 
-    <!--  Custom CSS stylesheet -->
+    <!-- Custom CSS stylesheet -->
     <link rel="stylesheet" href="/static/css/style.css">
     
     {% block head %} {% endblock %}  
   </head>
   <body>
     <div class="container">
-    <h1>SocialSesh</h1>
-    <h2>Connect. Create. Contribute.</h2>
+    <h2>SocialSesh</h2>
+    <h3>Connect. Create. Contribute.</h3>
     </div>
 
+    <div class="container">
     {% with messages = get_flashed_messages() %}
       {% if messages %}
         <ul class=flashes>
@@ -34,17 +32,17 @@
         </ul>
       {% endif %}
     {% endwith %}
-    
-    <div class="container">
-    {% block body %}{% endblock %}
     </div>
-
+    
+    
+    {% block body %}{% endblock %}
+    
     <!-- jQuery -->
     <script
       src="https://code.jquery.com/jquery-3.6.0.js"
       integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
       crossorigin="anonymous"></script>
-      
+
     <!-- Bootstrap Bundle with JS Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     
