--- a/templates/index.html
+++ b/templates/index.html
@@ -1,21 +1,31 @@
 {% extends 'base.html' %} 
 
-{% block title %} {% endblock %} 
+{% block title %} SocialSesh {% endblock %} 
 
 {% block body %} 
 
-<em>Through Online Virtual Social Events</em>
+<div class="container">
+  <em>Through Online Virtual Social Events</em>
+</div>
 
-  <form action="/form">
-    <p>
-      <button id="create">Create profile</button> 
-    </p>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-6">
+      <form action="/form">
+          <p>
+            <button type="submit" class="btn btn-outline-info btn-sm" id="create">Create profile</button>
+          </p>
+      </form> 
+    </div>
+  </div>
+</div>
 
-  </form> 
+<div class="container">
   <form action="/login">
     <p>
-      <button id="login">Log in</button> 
+      <button type="submit" class="btn btn-outline-info btn-sm" id="login">Log in</button>
     </p>
   </form> 
+</div>
 
 {% endblock %} 
