--- a/templates/login.html
+++ b/templates/login.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 
-{% block title %} {% endblock %}
+{% block title %} SocialSesh - LogIn {% endblock %}
 
 {% block body %}
 
-<h4>To view profile, please log-in:</h4>
+<h5>To view profile, please log-in:</h5>
 
 <form action="/login" method="POST">
   <p>
