--- a/templates/thanks.html
+++ b/templates/thanks.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 
-{% block title %}{% endblock %}
+{% block title %} SocialSesh - Confirmation {% endblock %}
 
 {% block body %}
 
-<h3>Thank you for registering!</h3>
+<h5>Thank you for registering!</h5>
 
 <p>We've sent you a text message confirmation</p> 
 
