--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 </div>
 
 <div class="container">
-  <div class="row my-homepage-row justify-content-center align-items-center">
+  <div class="row my-homepage-row ">
     <div class="col">
       <form action="/form">
           <p>
@@ -27,5 +27,11 @@
   </div>
 </div>
 
+<div class="container">
+<footer>
+  <p>SocialSesh © 2021</p>
+</footer>
+</div>
 
 {% endblock %} 
+
