--- a/templates/base.html
+++ b/templates/base.html
@@ -18,11 +18,6 @@
   </head>
   <body>
     <div class="container">
-    <h2>SocialSesh</h2>
-    <h3>Connect. Create. Contribute.</h3>
-    </div>
-
-    <div class="container">
     {% with messages = get_flashed_messages() %}
       {% if messages %}
         <ul class=flashes>
@@ -34,7 +29,6 @@
     {% endwith %}
     </div>
     
-    
     {% block body %}{% endblock %}
     
     <!-- jQuery -->
@@ -45,6 +39,6 @@
 
     <!-- Bootstrap Bundle with JS Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-    
+    {% block scripts %} {% endblock %}
   </body>
 </html>
