--- a/templates/category_events.html
+++ b/templates/category_events.html
@@ -5,7 +5,7 @@
 {% block body %} 
 
 <p>Choose the virtual event category you would like to view:</p>
-  <form id ="category" action="/api/category" method = "POST">
+  <form action="/api/category" id ="category" method = "POST">
       <select name="types" id = "types">
         <option value="select">Select</option>
         <option value="activity">Activity</option>
@@ -19,6 +19,10 @@
   <ol id ="event_results">
    
   </ol>
-<script src="/static/js/profile.js"></script>
+
 
 {% endblock %} 
+
+{% block scripts %}
+<script src="/static/js/profile.js"></script>
+{% endblock %}
