--- a/templates/base.html
+++ b/templates/base.html
@@ -12,12 +12,35 @@
     <script src="https://use.fontawesome.com/589931c264.js"></script>
 
     <!-- Custom CSS stylesheet -->
-    <link rel="stylesheet" href="/static/css/style.css">
+    <link href="/static/css/index.css" rel="stylesheet">
     
     {% block head %} {% endblock %}  
+
   </head>
   <body>
-    <div class="container">
+    <div>
+      <nav class="navbar fixed-top navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/">SocialSesh</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        </div>
+      </nav>
+    </div>
+    <div class="navbarNav" id="navbarNav" style>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link">Create Account</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link">Log In</a>
+        </li>
+      </ul>
+      </div>
+    </div>
+   
+    
     {% with messages = get_flashed_messages() %}
       {% if messages %}
         <ul class=flashes>
@@ -27,9 +50,13 @@
         </ul>
       {% endif %}
     {% endwith %}
-    </div>
     
-    {% block body %}{% endblock %}
+    
+    {% block body %}
+
+    <div id="main"></div>
+
+    {% endblock %}
     
     <!-- jQuery -->
     <script
@@ -37,8 +64,13 @@
       integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
       crossorigin="anonymous"></script>
 
-    <!-- Bootstrap Bundle with JS Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    <!-- Popper and Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
+
     {% block scripts %} {% endblock %}
   </body>
+  <footer>
+    <p>SocialSesh © 2021</p>
+  </footer>
 </html>
