--- a/templates/base.html
+++ b/templates/base.html
@@ -17,30 +17,16 @@
     {% block head %} {% endblock %}  
 
   </head>
+   
   <body>
     <div>
       <nav class="navbar fixed-top navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/">SocialSesh</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+          <a class="navbar-brand" href="#">SocialSesh</a>
         </div>
       </nav>
-    </div>
-    <div class="navbarNav" id="navbarNav" style>
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link">Create Account</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link">Log In</a>
-        </li>
-      </ul>
-      </div>
-    </div>
-   
-    
+  </div>
+      
     {% with messages = get_flashed_messages() %}
       {% if messages %}
         <ul class=flashes>
@@ -55,6 +41,8 @@
     {% block body %}
 
     <div id="main"></div>
+
+   
 
     {% endblock %}
     
