Center and crop background picture

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,2 +1,7 @@
 /* Styling forms and server routes */
 
+/* .background_img {   
+  background: url("static/img/background/meeting-5804134_1280.png");   
+  background-repeat: no-repeat;   
+  background-size: 300px 100px; } */
+
