Update navbar link

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,20 +4,11 @@
 
 {% block body %}
 
-<!-- <div class="background_img">
-    <div class="container">
+<div class="background_img">
+    <div class="container-fluid">
         <img img="homepage_img" src="static/img/background/meeting-5804134_1280.png" alt="virtual_meeting">
     </div>
-</div> -->
-
-<div class="card bg-dark text-white">
-    <img class="card-img" src="static/img/background/meeting-5804134_1280.png" alt="Card image">
-    <div class="card-img-overlay">
-      <h5 class="card-title">SocialSesh</h5>
-      <p class="card-text">Connect. Create. Contribute</p>
-      <p class="card-text"><em>Through Online Virtual Social Events</em></p>
-    </div>
-  </div>
+</div>
 
 <div class="container">
     <div class="row my-homepage-row ">
