--- a/templates/base.html
+++ b/templates/base.html
@@ -18,13 +18,29 @@
             {% block head %} {% endblock %}
 
         </head>
+    <body>
 
-<body>
-    <nav class="navbar navbar-light bg-light">
-        <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
             <a class="navbar-brand" href="/">SocialSesh</a>
-        </div>
-    </nav>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" href="/form">Signup</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/login">Login</a>
+                </li>
+                </ul>
+                <span class="navbar-text">
+                Navbar text with an inline element
+                </span>
+            </div>
+            </div>
+        </nav>
 
 
     {% with messages = get_flashed_messages() %}
@@ -38,9 +54,7 @@
     {% endwith %}
 
 
-    {% block body %}
-
-    {% endblock %}
+    {% block body %}{% endblock %}
 
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.js"
