--- a/templates/base.html
+++ b/templates/base.html
@@ -14,13 +14,13 @@
 
             <!-- Custom CSS stylesheet -->
             <link href="/static/css/index.css" rel="stylesheet">
+            <link href="/static/css/form.css" rel="stylesheet">
 
             {% block head %} {% endblock %}
 
         </head>
     <body>
-
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
             <a class="navbar-brand" href="/">SocialSesh</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,12 +36,11 @@
                 </li>
                 </ul>
                 <span class="navbar-text">
-                Navbar text with an inline element
+                
                 </span>
             </div>
             </div>
         </nav>
-
 
     {% with messages = get_flashed_messages() %}
     {% if messages %}
