--- a/templates/form.html
+++ b/templates/form.html
@@ -4,32 +4,35 @@
 
 {% block body %} 
 
-<h5>To create profile, please fill out the following:</h5>
 
-  <form action="/form" id="createprofile" method="POST">
-    <p>
-      <label for="fname">First name</label>
-      <input type="text" id="first" name="fname" required>
-    </p>
-    <p>
-      <label for="lname">Last name</label>
-      <input type="text" id="last" name="lname" required>
-    </p>
-    <p>
-      <label for="email">Email</label>
-      <input type="text" id="email" name="email" required>
-    </p>
-    <p>
-      <label for="password">Password</label>
-      <input type="password" id="pass" name="password" required>
-    </p>
-    <p>
-      <label for="phone">Phone number</label>
-      <input type="text" id="phone" name="phone" required>
-    </p>
-    <p>
-      <button type="submit">Submit</button>
-    </p>
-  </form> 
+<div class="signup_form container">
+  <h5>To create profile, please fill out the following:</h5>
+    <form action="/form" id="createprofile" method="POST">
+      <p>
+        <label for="fname">First name</label>
+        <input type="text" id="first" name="fname" required>
+      </p>
+      <p>
+        <label for="lname">Last name</label>
+        <input type="text" id="last" name="lname" required>
+      </p>
+      <p>
+        <label for="email">Email</label>
+        <input type="text" id="email" name="email" required>
+      </p>
+      <p>
+        <label for="password">Password</label>
+        <input type="password" id="pass" name="password" required>
+      </p>
+      <p>
+        <label for="phone">Phone number</label>
+        <input type="text" id="phone" name="phone" required>
+      </p>
+      <p>
+        <button type="submit">Submit</button>
+      </p>
+    </form> 
+</div>
+
 
 {% endblock %} 
