--- a/templates/form.html
+++ b/templates/form.html
@@ -29,7 +29,8 @@
         <input type="text" id="phone" name="phone" required>
       </p>
       <p>
-        <button type="submit">Submit</button>
+        <!-- <button type="submit">Submit</button> -->
+        <button type="submit" class="btn btn-dark btn-sm">Submit</button>
       </p>
     </form> 
 </div>
