--- a/static/css/index.css
+++ b/static/css/index.css
@@ -22,6 +22,7 @@ body {
 
 h3 {
   color: black;
+  
   /* font-family: ; */
 }
 
@@ -31,6 +32,8 @@ h4 {
 
 h5 {
   color: black;
+  text-align: center;
+
 }
 
 p {
