Fix create profile form display

--- a/static/css/form.css
+++ b/static/css/form.css
@@ -1,6 +1,6 @@
 /* CSS for homepage route */
 
-div form {
+/* div form {
 
   width: 300px;
   margin-left: auto;
@@ -10,7 +10,7 @@ div form {
 .signup_form {
 
   border: solid 2px black;
-}
+} */
 
 /* #createprofile {
 
