--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,8 @@
 
         </head>
     <body>
+
+        <!-- if user_is is None...else  -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
             <a class="navbar-brand" href="/">SocialSesh</a>
@@ -41,6 +43,8 @@
             </div>
             </div>
         </nav>
+
+        <!-- else display navbar with additional tabs -->
 
     {% with messages = get_flashed_messages() %}
     {% if messages %}
