--- a/templates/form.html
+++ b/templates/form.html
@@ -5,7 +5,7 @@
 {% block body %} 
 
 
-<div class="signup_form container">
+<!-- <div class="signup_form container">
   <h5>To create profile, please fill out the following:</h5>
     <form action="/form" id="createprofile" method="POST">
       <p>
@@ -29,11 +29,47 @@
         <input type="text" id="phone" name="phone" required>
       </p>
       <p>
-        <!-- <button type="submit">Submit</button> -->
+        
         <button type="submit" class="btn btn-dark btn-sm">Submit</button>
       </p>
     </form> 
-</div>
+</div> -->
 
+
+<main class="form-signup">
+  <form action="/form" id="createprofile" method="POST">
+    <img class="mb-4" src="../assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
+    <h1 class="h3 mb-3 fw-normal">To create profile, please fill out the following:</h1>
+
+    <div class="form-floating">
+      <input type="fname" class="form-control" id="floatingFirst" placeholder="Jane">
+      <label for="floatingInput">First name</label>
+    </div>
+    <div class="form-floating">
+      <input type="lname" class="form-control" id="floatingLast" placeholder="Doe">
+      <label for="floatingInput">Last name</label>
+    </div>
+    <div class="form-floating">
+      <input type="email" class="form-control" id="floatingEmail" placeholder="jdoe@test.com">
+      <label for="floatingPassword">Email</label>
+    </div>
+    <div class="form-floating">
+      <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+      <label for="floatingPassword">Password</label>
+    </div>
+    <div class="form-floating">
+      <input type="phone" class="form-control" id="floatingPhone" placeholder="Phone">
+      <label for="floatingPassword">Phone</label>
+    </div>
+
+    <div class="checkbox mb-3">
+      <label>
+        <input type="checkbox" value="remember-me"> Remember me
+      </label>
+    </div>
+    <button class="btn btn-dark btn-sm" type="submit">Sign up</button>
+    <p class="mt-5 mb-3 text-muted">&copy; SocialSesh 2021</p>
+  </form>
+</main>
 
 {% endblock %} 
