Update landing page code to display elements differently

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,7 +1,44 @@
 /* CSS for homepage route */
 
-.background_img {   
-  /* background: url("static/img/background/meeting-5804134_1280.png");    */
+.header {
+  height: 600px;
+  width: 100%;
+  padding: 30px 0 30px;
+  /* margin-top: 50px; */
+  background-image: url(../img/background/meeting-5804134_1280.png);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #fff;
+  /* color: #6B7E6B; */
+}
+
+.header img {
+  height: 350px;
+  width: 450px;
+  margin: 70px 0 0 40px;
+}
+
+.header h1 {
+  font-size: 40px;
+  font-weight: 700;
+  padding-top: 30px;
+}
+
+.header h1,
+.header p,
+.header button {
+  margin-top: 20px;
+}
+
+.header .btn {
+  border-radius: 8px;
+  margin: 40px 20px;
+}
+
+
+/* .background_img {   
+  background: url("static/img/background/meeting-5804134_1280.png");   
   background-repeat: no-repeat;   
   width: 100%;
   height: 65vh; 
@@ -14,7 +51,7 @@
   display: block;
   width: 100%;
   margin: -15% 0;
-}
+} */
 
 body {
   background-color: white;
