Create signup form. Add background picture

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,10 +12,16 @@
             <!-- Font Awesome CDN -->
             <script src="https://use.fontawesome.com/589931c264.js"></script>
 
+
+            <!-- Google Fonts -->
+            <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+
+            
             <!-- Custom CSS stylesheet -->
             <link href="/static/css/index.css" rel="stylesheet">
             <link href="/static/css/form.css" rel="stylesheet">
 
+        
             {% block head %} {% endblock %}
 
         </head>
