--- a/static/css/form.css
+++ b/static/css/form.css
@@ -1,18 +1,6 @@
 /* CSS for homepage route */
 
-/* div form {
-
-  width: 300px;
-  margin-left: auto;
-  margin-right: auto;
-
+.form-signup h1 {
+  
+  margin-top: 20px;
 }
-.signup_form {
-
-  border: solid 2px black;
-} */
-
-/* #createprofile {
-
-  border: solid 1px black;
-} */
