--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,5 +1,8 @@
 /* CSS for homepage route */
 
+
+/* SERVICES */
+
 .header {
   height: 600px;
   width: 100%;
@@ -37,6 +40,44 @@
 }
 
 
+/* SERVICES */
+
+.services {
+  padding: 10px 0 0px;
+  text-align: center;
+}
+
+.services h2, 
+.services h4 {
+  color: #4c4c4c;
+  margin: 20px 0 20px;
+}
+
+.services p {
+  color: #737373;
+  font-size: 14px;
+  padding-bottom: 40px;
+}
+
+
+/* SOCIAL MEDIA */
+
+
+/* FOOTER */
+
+/* #my-footer {
+  font-size: 26px;
+  margin: 0 10px 0 0;
+  color: #000000;
+  text-decoration: none;
+  background: #b7b6b6;
+  padding: 10px;
+  box-sizing: border-box;
+  width: 50px;
+  text-align: center;
+} */
+
+
 /* .background_img {   
   background: url("static/img/background/meeting-5804134_1280.png");   
   background-repeat: no-repeat;   
@@ -65,6 +106,7 @@ h3 {
 
 h4 {
   color: black;
+  
 }
 
 h5 {
