--- a/templates/form.html
+++ b/templates/form.html
@@ -36,40 +36,48 @@
 </div> -->
 
 
-<main class="form-signup">
-  <form action="/form" id="createprofile" method="POST">
-    <img class="mb-4" src="../assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
-    <h1 class="h3 mb-3 fw-normal">To create profile, please fill out the following:</h1>
+<div id="form-signup" class="form-signup">
+  <div class="container">
+    <div class="row">
+      <div class="col-6">
+        <main class="form-signup">
+          <form action="/form" id="createprofile" method="POST">
+            <!-- <img class="mb-4" src="../img/background/tablet-6110623_1280.png" alt="" width="72" height="57"> -->
+            <h1 class="h3 mb-3 fw-normal">To create profile, fill out the following:</h1>
 
-    <div class="form-floating">
-      <input type="fname" class="form-control" id="floatingFirst" placeholder="Jane">
-      <label for="floatingInput">First name</label>
-    </div>
-    <div class="form-floating">
-      <input type="lname" class="form-control" id="floatingLast" placeholder="Doe">
-      <label for="floatingInput">Last name</label>
-    </div>
-    <div class="form-floating">
-      <input type="email" class="form-control" id="floatingEmail" placeholder="jdoe@test.com">
-      <label for="floatingPassword">Email</label>
-    </div>
-    <div class="form-floating">
-      <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-      <label for="floatingPassword">Password</label>
-    </div>
-    <div class="form-floating">
-      <input type="phone" class="form-control" id="floatingPhone" placeholder="Phone">
-      <label for="floatingPassword">Phone</label>
-    </div>
+            <div class="form-floating">
+              <input type="fname" class="form-control" id="floatingFirst" placeholder="Jane">
+              <label for="floatingInput">First name</label>
+            </div>
+            <div class="form-floating">
+              <input type="lname" class="form-control" id="floatingLast" placeholder="Doe">
+              <label for="floatingInput">Last name</label>
+            </div>
+            <div class="form-floating">
+              <input type="email" class="form-control" id="floatingEmail" placeholder="jdoe@test.com">
+              <label for="floatingPassword">Email</label>
+            </div>
+            <div class="form-floating">
+              <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+              <label for="floatingPassword">Password</label>
+            </div>
+            <div class="form-floating">
+              <input type="phone" class="form-control" id="floatingPhone" placeholder="Phone">
+              <label for="floatingPassword">Phone</label>
+            </div>
 
-    <div class="checkbox mb-3">
-      <label>
-        <input type="checkbox" value="remember-me"> Remember me
-      </label>
+            <div class="checkbox mb-3">
+              <label>
+                <input type="checkbox" value="remember-me"> Remember me
+              </label>
+            </div>
+            <button class="btn btn-dark btn-lg" type="submit">Sign up</button>
+            <p class="mt-5 mb-3 text-muted">&copy; SocialSesh 2021</p>
+          </form>
+        </main>
+      </div>
     </div>
-    <button class="btn btn-dark btn-sm" type="submit">Sign up</button>
-    <p class="mt-5 mb-3 text-muted">&copy; SocialSesh 2021</p>
-  </form>
-</main>
+  </div>
+</div>
 
 {% endblock %} 
