--- a/templates/index.html
+++ b/templates/index.html
@@ -9,16 +9,16 @@
         <div class="row">
             <div class="col-lg-5 col-md-6">
                 <h1>SocialSesh</h1>
-                <p id="landing-page-description">Through Online Virtual Events...</p>
-                <p id="landing-page-description">Lets Connect. Create. Contribute.</p>
+                <p id="landing-page-description">Through online virtual events...</p>
+                <p id="landing-page-description">Let's safely interact!</p>
                 <form action="/form">
                     <p>
-                        <button type="submit" class="btn btn-dark btn-sm" id="create">Sign-up</button>
+                        <button type="submit" class="btn btn-dark btn-lg" id="create">Sign-up</button>
                     </p>
                 </form>
                 <form action="/login">
                     <p>
-                        <button type="submit" class="btn btn-dark btn-sm" id="login">Log in</button>
+                        <button type="submit" class="btn btn-dark btn-lg" id="login">Log in</button>
                     </p>
                 </form>
             </div>
@@ -26,5 +26,50 @@
     </div>
 </div>
 
+<div id="services" class="services">
+    <div class="container">
+        <h2>Join Today</h2>
+        <p>
+            SocialSesh is a online platform that offers a safe place to meet with people all over the world. By attending online virtual events, you can maintain healthy human interaction that will keep relationships thriving.
+        </p>
+        <div class="row">
+            <div class="col-lg-4 col-md-4"></div>
+                <h4>Connect</h4>
+                <p>Meet with others who share similar interests.</p>
+            <div class="col-lg-4 col-md-4"></div>
+                <h4>Create</h4>
+                <p>Set up events that bring value and importance to the community.</p>
+            <div class="col-lg-4 col-md-4"></div>
+                <h4>Contribute</h4>
+                <p>Support others ideas by attending events that catch your eye.</p>
+        </div>
+    </div>
+</div>
+
+<!-- <div id="social-media" class="social-media">
+    <div class="container">
+        <div class="row">
+            <a href="https://twitter.com" class="fab fa-twitter"></a>
+            <a href="https://facebook.com" class="fab fa-facebook-f"></a>
+            <a href="https://pinterest.com" class="fab fa-pinterest"></a>
+            <a href="https://instagram.com" class="fab fa-instagram"></a>
+            <a href="https://plus.google.com" class="fab fa-google-plus-g"></a>
+        </div>
+    </div>
+</div> -->
+
+<!-- <footer id="my-footer" class="text-center page-footer font-small">
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <div class="mb-5 flex-center">
+                    <a href="https://github.com" class="fab fa-github"></a>
+                    <a href="https://twitter.com" class="fab fa-twitter"></a>
+                    <a href="https://linkedin.com" class="fab fa-linkedin-f"></a>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer> -->
 
 {% endblock %}
