Create login form. Fix password hash error

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,10 +16,11 @@
             <!-- Google Fonts -->
             <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
 
-            
+
             <!-- Custom CSS stylesheet -->
             <link href="/static/css/index.css" rel="stylesheet">
             <link href="/static/css/form.css" rel="stylesheet">
+            <link href="/static/css/login.css" rel="stylesheet">
 
         
             {% block head %} {% endblock %}
