--- a/templates/form.html
+++ b/templates/form.html
@@ -66,11 +66,11 @@
               <label for="floatingPassword">Phone</label>
             </div>
 
-            <div class="checkbox mb-3">
+            <!-- <div class="checkbox mb-3">
               <label>
                 <input type="checkbox" value="remember-me"> Remember me
               </label>
-            </div>
+            </div> -->
             <button class="btn btn-dark btn-lg" type="submit">Sign up</button>
             <p class="mt-5 mb-3 text-muted">&copy; SocialSesh 2021</p>
           </form>
