--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
                 <p id="landing-page-description">Let's safely interact!</p>
                 <form action="/form">
                     <p>
-                        <button type="submit" class="btn btn-dark btn-lg" id="create">Sign-up</button>
+                        <button type="submit" class="btn btn-dark btn-lg" id="create">Signup</button>
                     </p>
                 </form>
                 <form action="/login">
@@ -30,7 +30,7 @@
     <div class="container">
         <h2>Join Today</h2>
         <p>
-            SocialSesh is a online platform that offers a safe place to meet with people all over the world. By attending online virtual events, you can maintain healthy human interaction that will keep relationships thriving.
+            SocialSesh is a online platform that offers a place to meet with people all over the world. By attending online virtual events, you can maintain safe human interaction that will keep relationships alive.
         </p>
         <div class="row">
             <div class="col-lg-4 col-md-4"></div>
